# python_sharepoint_ingest

./: .clineignore  .cursorignore  .env.example  .gitignore  PYTEST_TESTING_GUIDE.md  README.md  SOURCE_TO_DESTINATION_DATA_TYPES.md  _diag_folders.py  _diag_graph_probe.py  _diag_headers.py  _diag_rest_probe.py  _diag_sql_blockers.py  _diag_token.py  _diag_user_token.py  _purge_dev_processed_failed_files.py  _restore_failed_files.py  _upload_invalid_sample_files.py  _upload_sample_files.py  _verify_dev_reset_state.py  pyproject.toml  requirements.txt
docs/: PERFORMANCE_AND_RESOURCE_HANDLING.md  PRODUCTION_AUTHENTICATION_GUIDE.md  STAGING_ONLY_MODE_QA.md  VALIDATION_AND_NOTIFICATION_REFERENCE.md  manual-spn-sharepoint-graph-setup-guide.html
precompiled/: greenlet-3.5.2-cp313-cp313-win_amd64.whl
sharepoint_ingest/: __main__.py  _azure_credential.py  _email_templates.py  _secret_protector.py  config.py  ingestion_engine.py  keyvault_client.py  logging_utils.py  main.py  models.py  notifications.py  schema_validator.py  sharepoint_client.py  sql_client.py
sharepoint_setup/: README.md  bootstrap_sql_schema.py  create_local_smtp4dev.ps1  create_sql_container.ps1  dbmail_send_test.py  keyvault_secret_test.py  keyvault_setup.py  prod_auth_test.py  provision_sharepoint_app_registrations.ps1  provision_sharepoint_folders.py  purview_mip_excel_test.py  sharepoint_auth_test.py  spn_healthcheck_test.py  sql_connection_test.py  validate_keyvault_rbac.ps1
sql/: _tmp_reset_and_prepare_dev.sql  bootstrap.sql  configure_local_dbmail_profile.sql  migrate_audit_destination_fields.sql  (+5 more)
(+122 files in other folders)
