[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-sharepoint-ingest"
version = "0.1.0"
description = "Config-driven SharePoint to SQL ingestion framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "azure-identity>=1.17.1",
  "azure-keyvault-secrets>=4.8.0",
  "msal>=1.29.0",
  "requests>=2.32.3",
  "pandas>=2.2.2",
  "openpyxl>=3.1.2",
  "pyarrow>=15.0.0",
  "python-dotenv>=1.0.1",
  "SQLAlchemy>=2.0.31",
  "pyodbc>=5.1.0",
  "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
  "pre-commit>=3.8.0",
]

[project.scripts]
sharepoint-ingest = "sharepoint_ingest.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sharepoint_ingest*"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = ["sharepoint_ingest"]
